# lending-iterator.rs

./: Cargo.toml  README.md  bacon.toml  cargo_publish.sh  change_version.sh  fix-docsrs-li-details-summary.html
.cargo/: config
.github/workflows/: CI.yml  future-proof.yml
examples/: higher_kinded_types.rs
src/: _lib.rs  compile_fail_tests.md  helpers.rs  higher_kinded_types.md  higher_kinded_types.rs  lending_iterator.rs  prelude.rs  utils.rs  windows_mut.rs
src/lending_iterator/: _mod.rs  _trait.rs  dyn.rs  ext.rs  impls.rs  tests.rs
src/lending_iterator/adapters/: _mod.rs  and_then.rs  filter.rs  filter_map.rs  from_fn.rs  from_iter.rs  fuse.rs  into_iter.rs  map.rs  map_and_then.rs  skip.rs  take.rs
src/lending_iterator/constructors/: _mod.rs  from_fn.rs  from_iter.rs  from_stream.rs  repeat.rs  repeat_mut.rs  windows_mut.rs  windows_mut_.rs
src/lending_iterator/dyn/: _mod.rs  tests.rs
src/proc_macros/: Cargo.toml  mod.rs
src/utils/: macros.rs  mod.rs
