# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template

[lib]
name = "lending_iterator"
path = "src/_lib.rs"

[package]
name = "lending-iterator"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.0-rc1"  # Keep in sync
edition = "2021"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/lending-iterator.rs"
documentation = "https://docs.rs/lending-iterator"
readme = "README.md"

# description = "…"
# keywords = []

[features]
better-docs = []  # allowed to break MSRV
ui-tests = ["better-docs"]

[dependencies]
higher-order-closure.version = "0.0.5"
macro_rules_attribute.version = "0.1.2"
nougat.version = "0.2.0-rc2"
polonius-the-crab.version = "0.2.1"
never-say-never = "6.6.666"
paste = "1.0.7"


[dependencies.lending-iterator-proc_macros]
path = "src/proc_macros"
version = "0.1.0-rc1"  # Keep in sync

[dev-dependencies]

[workspace]
members = [
    "src/proc_macros",
]

[package.metadata.docs.rs]
features = [
    "better-docs",
]
rustdoc-args = [
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
